# discord-bot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
.sqlx/: query-569652fb42e568c96d64dbed7d6e56ef78e5b7b2e654ce0bb85a821952b0eebc.json  query-73f1ddf39754b2a7709332dc6079d1e72f07fc257c1973bb4a868f2ec731dd73.json  query-8564c98718b6e441a2c17e883f8a70106ab5fa5e02de36c339371a4985780bb9.json  query-b98e16e948fbe544de52c668d0d12ef3d515b7a4471b63094f582df7deaee6eb.json  query-cb0e0d4187ad17cd1164f1fce92a6116daf7d5c9362b2bea7553c3bab46a8b0a.json
migrations/: 20231016114537_initial.sql  20231016134230_split_birthday.sql  20231016160216_name_as_primary.sql  20231016160216_name_as_primary.sql.sql  20231016161500_timezone.sql  create_birthdays.sql
src/: main.rs
src/commands/: birthday.rs  general.rs  mod.rs
