[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features = ["framework", "standard_framework", "model"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
log = "0.4"
dotenvy = "0.15"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = "0.4"